# Pseudokrat

./: .gitattributes  .gitignore  Anonymisierung starten.bat  Begriffe.example.txt  CHANGELOG.md  DECISIONS.md  DSGVO_DRAFT.md  LICENSE  LIESMICH_Ordnermodus.txt  PILOT_KIT.md  PITCH.md  PRODUCTION_READINESS.md  PRODUCTION_READY_GATE.md  README.md  SECURITY_MODEL.md  SELF_AUDIT.md  SIGNING.md  START.bat  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
addins/excel/: README.md  manifest.xml  package.json  tsconfig.json  webpack.config.js
addins/excel/src/: taskpane.css  taskpane.html  taskpane.ts
addins/outlook/: README.md  manifest.xml  package.json  webpack.config.js
addins/outlook/src/: taskpane.css  taskpane.html  taskpane.ts
addins/word/: README.md  manifest.xml  package.json  webpack.config.js
addins/word/src/: taskpane.html  taskpane.ts
packaging/: INSTALLER.md  build_gumroad_zip.ps1  build_macos.sh  build_windows.ps1  installer.iss  macos-entitlements.plist  make_icon.py  pseudokrat.spec  sign_macos.sh  sign_windows.ps1
packaging/gumroad/: ANLEITUNG.txt  GUMROAD_LISTING.md  START.bat
src/pseudokrat/: __init__.py  __main__.py  anonymizer.py  cli.py  clipboard.py  config.py  deanonymizer.py  doctor.py  fuzzy.py  hotkey.py  install.py  logging_config.py  rate_limit.py  server.py  watcher.py
src/pseudokrat/dp/: __init__.py  numeric_permute.py
src/pseudokrat/formats/: __init__.py  base.py  csv_handler.py  docx_handler.py  html_handler.py  pdf_handler.py  txt_handler.py  xlsx_handler.py
src/pseudokrat/gui/: __init__.py  __main__.py  controller.py  main_window.py  preview_widget.py  tray.py  wizard.py
src/pseudokrat/pii/: __init__.py  model_install.py  ollama_detector.py  privacy_filter.py
src/pseudokrat/recognizers/: __init__.py  address.py  at_konto_blz.py  at_register.py  at_steuernummer.py  at_svnr.py  at_uid.py  base.py  bic.py  birthdate.py  ch_ahv.py  company.py  creditcard.py  de_steuer_id.py  de_ust_id.py  email.py  escaped_placeholder.py  firmenbuch.py  iban.py  mandanten_nr.py  person.py  person_name.py  phone.py  secret.py  url.py
src/pseudokrat/store/: __init__.py  audit_log.py  key_protector.py  mapping_store.py  profile.py  secure_db.py
tests/: conftest.py  test_address_recognizer.py  test_anonymizer_integration.py  test_audit_export_pdf.py  test_audit_log.py  test_audit_run.py  test_bic_recognizer.py  test_birthdate_recognizer.py  test_cli.py  test_cli_clipboard.py  test_cli_dp_amounts.py  test_cli_formats.py  test_cli_model.py  test_clipboard.py  test_council_batch_a.py  test_council_batch_d.py  test_council_batch_f.py  test_council_batch_g.py  test_council_batch_h.py  test_council_batch_i.py  test_council_batch_k.py  test_csv_reliability.py  test_doctor.py  test_dp_numeric_permute.py  test_escaped_placeholder.py  test_formats_docx.py  test_formats_html.py  test_formats_pdf.py  test_formats_txt_csv.py  test_formats_xlsx.py  test_formats_xlsx_ast.py  test_fuzz_pipelines.py  test_fuzzy.py  test_gap_select.py  test_gui_controller.py  test_gui_main_window.py  test_gui_simple_mode.py  test_gui_tray.py  test_gui_wizard.py  test_hotkey.py  (+34 more)
tests/arena/: BEFUND.md  README.md  __init__.py  arena_report.json  arena_report.md  corpus.py  leakcheck.py  runner.py  test_arena_zero_leak.py
tests/eval/: __init__.py  fixture_builder.py  generate_fixtures.py  runner.py  scoring.py  synth.py  test_runner_ml_mode.py  test_scoring.py  test_synth.py
tests/eval/fixtures/false_positive_traps/: expected.json  input.txt
tests/eval/fixtures/kanzlei_adel/: expected.json  input.txt
tests/eval/fixtures/lohnkonto_at/: expected.json  input.txt
tests/eval/fixtures/lohnkonto_de/: expected.json  input.txt
tests/eval/fixtures/rechnung_de/: expected.json  input.txt
tests/eval/fixtures/versicherung_ch/: expected.json  input.txt
tools/: __init__.py  audit_run.py  gap_select.py  gen_testdaten.py  release_gate.py
walkthrough/: run.py
