[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudokrat"
version = "0.1.0"
description = "Lokale PII-Anonymisierung für DACH-Berufsträger (Phase 1 — CLI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Pseudokrat Team" }]
keywords = ["pii", "anonymization", "dsgvo", "dach", "privacy", "presidio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "structlog>=24.1.0",
  "cryptography>=42.0.0",
  "rapidfuzz>=3.6.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
ml = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "huggingface-hub>=0.23.0",
]
presidio = [
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
]
sqlcipher = [
  # sqlcipher3-binary ist seit 2025 EOL; sqlcipher3-wheels liefert
  # gepflegte Manylinux/Windows-Wheels.
  "sqlcipher3-wheels>=0.5.7",
]
gui = [
  "PySide6-Essentials>=6.6.0",
]
clipboard = [
  "pyperclip>=1.9.0",
]
hotkeys = [
  "pyperclip>=1.9.0",
  "keyboard>=0.13.5; platform_system == 'Windows'",
  "pynput>=1.7.6",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-qt>=4.4.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "PySide6-Essentials>=6.6.0",
]

[project.scripts]
pseudokrat = "pseudokrat.cli:main"
pseudokrat-gui = "pseudokrat.gui.main_window:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pseudokrat = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = false
disallow_any_generics = true
ignore_missing_imports = true
files = ["src/pseudokrat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "ml: requires HuggingFace ML model download",
]

[tool.coverage.run]
source = ["src/pseudokrat"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.bandit]
# Audit-Log liest profile_metadata via SQLite ohne PII — false positives
# auf SQL-Konstanten sind erwartbar und unbedenklich; siehe D-018, D-029.
skips = [
  "B101",  # assert_used — interne Invarianten in non-prod-Pfaden
  "B404",  # subprocess-Imports — wir starten externe Tools (signtool) bewusst
  "B603",  # subprocess-without-shell — wir validieren Args am Ein-Punkt
]
exclude_dirs = ["tests", ".venv", "build", "dist", "packaging"]
