[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudokrat"
version = "0.1.0"
description = "Lokale PII-Anonymisierung für DACH-Berufsträger (Phase 1 — CLI)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Pseudokrat Team" }]
keywords = ["pii", "anonymization", "dsgvo", "dach", "privacy", "presidio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/svensteiner/Pseudokrat"
Repository = "https://github.com/svensteiner/Pseudokrat.git"
Issues = "https://github.com/svensteiner/Pseudokrat/issues"

dependencies = [
  "structlog>=24.1.0",
  "cryptography>=42.0.0",
  "rapidfuzz>=3.6.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
ml = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "huggingface-hub>=0.23.0",
]
presidio = [
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
]
sqlcipher = [
  # sqlcipher3-binary ist seit 2025 EOL; sqlcipher3-wheels liefert
  # gepflegte Manylinux/Windows-Wheels.
  "sqlcipher3-wheels>=0.5.7",
]
simple-mode = [
  # OS-Keyring-Integration für Profile ohne Master-Passwort.
  # Windows → Credential Manager / DPAPI; macOS → Keychain;
  # Linux → SecretService/GNOME-Keyring.
  "keyring>=24.0",
]
gui = [
  "PySide6-Essentials>=6.6.0",
]
clipboard = [
  "pyperclip>=1.9.0",
]
watcher = [
  # Ordner-Schiene: layout-erhaltende PDF-Redaction (Logos, Tabellen, Zahlen).
  "pymupdf>=1.24.0",
]
ocr = [
  # Text in Bildern (als Bild eingebettete Tabellen) erkennen und schwaerzen.
  # Reines pip, laeuft offline, kein Systemeingriff (kein Tesseract noetig).
  "rapidocr-onnxruntime>=1.3.0",
]
hotkeys = [
  "pyperclip>=1.9.0",
  "keyboard>=0.13.5; platform_system == 'Windows'",
  "pynput>=1.7.6",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-qt>=4.4.0",
  "hypothesis>=6.100.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "PySide6-Essentials>=6.6.0",
]
bundle-build = [
  # Absichtlich exakt gepinnt: PyInstaller-Bootloader und Hook-Verhalten sind
  # Teil des ausgelieferten Binärpakets.
  "PyInstaller==6.18.0",
]

[project.scripts]
pseudokrat = "pseudokrat.cli:main"

[project.gui-scripts]
pseudokrat-gui = "pseudokrat.gui.main_window:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pseudokrat = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = false
disallow_any_generics = true
ignore_missing_imports = true
files = ["src/pseudokrat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "ml: requires HuggingFace ML model download",
]

[tool.coverage.run]
source = ["src/pseudokrat"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.bandit]
# Audit-Log liest profile_metadata via SQLite ohne PII — false positives
# auf SQL-Konstanten sind erwartbar und unbedenklich; siehe D-018, D-029.
skips = [
  "B101",  # assert_used — interne Invarianten in non-prod-Pfaden
  "B404",  # subprocess-Imports — wir starten externe Tools (signtool) bewusst
  "B603",  # subprocess-without-shell — wir validieren Args am Ein-Punkt
]
exclude_dirs = ["tests", ".venv", "build", "dist", "packaging"]
